data/derived/sp14/progs/unify/prog1379.ml.out
Characters 75-76:
  then numdigits n
                 ^
Error: This expression has type int but an expression was expected of type
         'a list
